--- a/notebooks/01.03-Magic-Commands.ipynb
+++ b/notebooks/01.03-Magic-Commands.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<!--BOOK_INFORMATION-->\n",
     "<img align=\"left\" style=\"padding-right:10px;\" src=\"figures/PDSH-cover-small.png\">\n",
-    "*This notebook contains an excerpt from the [Python Data Science Handbook](http://shop.oreilly.com/product/0636920034919.do) by Jake VanderPlas; the content is available [on GitHub](https://github.com/jakevdp/PythonDataScienceHandbook).*\n",
+    "*This notebo ok contains an excerpt from the [Python Data Science Handbook](http://shop.oreilly.com/product/0636920034919.do) by Jake VanderPlas; the content is available [on GitHub](https://github.com/jakevdp/PythonDataScienceHandbook).*\n",
     "\n",
     "*The text is released under the [CC-BY-NC-ND license](https://creativecommons.org/licenses/by-nc-nd/3.0/us/legalcode), and code is released under the [MIT license](https://opensource.org/licenses/MIT). If you find this content useful, please consider supporting the work by [buying the book](http://shop.oreilly.com/product/0636920034919.do)!*"
    ]
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previous two sections showed how IPython lets you use and explore Python efficiently and interactively.\n",
+    "The previous two secti ons showed how IPython lets you use and explore Python efficiently and interactively.\n",
     "Here we'll begin discussing some of the enhancements that IPython adds on top of the normal Python syntax.\n",
     "These are known in IPython as *magic commands*, and are prefixed by the ``%`` character.\n",
     "These magic commands are designed to succinctly solve various common problems in standard data analysis.\n",
@@ -211,7 +211,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -229,5 +229,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
