--- a/notebooks/01.02-Shell-Keyboard-Shortcuts.ipynb
+++ b/notebooks/01.02-Shell-Keyboard-Shortcuts.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "| Keystroke                         | Action                                     |\n",
     "|-----------------------------------|--------------------------------------------|\n",
-    "| ``Ctrl-a``                        | Move cursor to the beginning of the line   |\n",
+    "| ``Ctrl-a-modified``               | Move v2 cursor to the beginning of the line|\n",
     "| ``Ctrl-e``                        | Move cursor to the end of the line         |\n",
     "| ``Ctrl-b`` or the left arrow key  | Move cursor back one character             |\n",
     "| ``Ctrl-f`` or the right arrow key | Move cursor forward one character          |"
@@ -72,6 +72,7 @@
     "\n",
     "| Keystroke                     | Action                                           |\n",
     "|-------------------------------|--------------------------------------------------|\n",
+    "| Cmd key                       | Go to next cell                                  |\n",
     "| Backspace key                 | Delete previous character in line                |\n",
     "| ``Ctrl-d``                    | Delete next character in line                    |\n",
     "| ``Ctrl-k``                    | Cut text from cursor to end of line              |\n",
@@ -92,8 +93,6 @@
     "\n",
     "| Keystroke                           | Action                                     |\n",
     "|-------------------------------------|--------------------------------------------|\n",
-    "| ``Ctrl-p`` (or the up arrow key)    | Access previous command in history         |\n",
-    "| ``Ctrl-n`` (or the down arrow key)  | Access next command in history             |\n",
     "| ``Ctrl-r``                          | Reverse-search through command history     |"
    ]
   },
@@ -101,46 +100,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The reverse-search can be particularly useful.\n",
-    "Recall that in the previous section we defined a function called ``square``.\n",
-    "Let's reverse-search our Python history from a new IPython shell and find this definition again.\n",
-    "When you press Ctrl-r in the IPython terminal, you'll see the following prompt:\n",
+    "# 4\n",
     "\n",
-    "```ipython\n",
-    "In [1]:\n",
-    "(reverse-i-search)`': \n",
-    "```\n",
+    "While the use of the left and right arrow keys to move backward and forward in the line is quite obvious, there are other options that don't require moving your hands from the \"home\" keyboard position:\n",
     "\n",
-    "If you start typing characters at this prompt, IPython will auto-fill the most recent command, if any, that matches those characters:\n",
+    "| Keystroke                         | Action                                     |\n",
+    "|-----------------------------------|--------------------------------------------|\n",
+    "| ``Ctrl-a-modified``               | Move v2 cursor to the beginning of the line|\n",
+    "| ``Ctrl-e``                        | Move cursor to the end of the line         |\n",
+    "| ``Ctrl-b`` or the left arrow key  | Move cursor back one character             |\n",
+    "| ``Ctrl-f`` or the right arrow key | Move cursor forward one character          |\n",
     "\n",
-    "```ipython\n",
-    "In [1]: \n",
-    "(reverse-i-search)`sqa': square??\n",
-    "```\n",
-    "\n",
-    "At any point, you can add more characters to refine the search, or press Ctrl-r again to search further for another command that matches the query. If you followed along in the previous section, pressing Ctrl-r twice more gives:\n",
-    "\n",
-    "```ipython\n",
-    "In [1]: \n",
-    "(reverse-i-search)`sqa': def square(a):\n",
-    "    \"\"\"Return the square of a\"\"\"\n",
-    "    return a ** 2\n",
-    "```\n",
-    "\n",
-    "Once you have found the command you're looking for, press Return and the search will end.\n",
-    "We can then use the retrieved command, and carry-on with our session:\n",
-    "\n",
-    "```ipython\n",
-    "In [1]: def square(a):\n",
-    "    \"\"\"Return the square of a\"\"\"\n",
-    "    return a ** 2\n",
-    "\n",
-    "In [2]: square(2)\n",
-    "Out[2]: 4\n",
-    "```\n",
-    "\n",
-    "Note that Ctrl-p/Ctrl-n or the up/down arrow keys can also be used to search through history, but only by matching characters at the beginning of the line.\n",
-    "That is, if you type **``def``** and then press Ctrl-p, it would find the most recent command (if any) in your history that begins with the characters ``def``."
+    "While the use of the left and right arrow keys to move backward and forward in the line is quite obvious, there are other options that don't require moving your hands from the \"home\" keyboard position:"
    ]
   },
   {
@@ -153,7 +124,7 @@
     "\n",
     "| Keystroke                     | Action                                     |\n",
     "|-------------------------------|--------------------------------------------|\n",
-    "| ``Ctrl-l``                    | Clear terminal screen                      |\n",
+    "| ``Cmd-ab``                    | undo terminal screen                       |\n",
     "| ``Ctrl-c``                    | Interrupt current Python command           |\n",
     "| ``Ctrl-d``                    | Exit IPython session                       |\n",
     "\n",
@@ -194,9 +165,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
