Table with uneven number of '|'

--- a/notebooks/md-table-tests-v1.ipynb
+++ b/notebooks/md-table-tests-v1.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "eec14d4a-3c89-4e2a-a539-6b73fcdec35e",
+   "metadata": {},
+   "source": [
+    "### Table with uneven number of \"|\"\n",
+    "\n",
+    " |col1 | col 2 | col 3 |\n",
+    "  --   | ---   | --- \n",
+    "col1 | col 2 | col 3|\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bf9611b0-d80b-46db-8f01-93d3ece44ba9",
    "metadata": {},
    "source": [
